chore: add tests